@@ -1,3 +1,10 @@
+2008-07-17  Suman Manjunath  <msuman@novell.com>
+
+	* exchange-account-listener.c (add_cal_esource):
+	* exchange-mapi-account-setup.c (exchange_mapi_cal_commit):
+	Add the ACL properties to the source group as well as they are needed
+	by newly created folders. 
+
 2008-07-06  Suman Manjunath  <msuman@novell.com>
 
 	* exchange-account-listener.c: (add_cal_esource): Only enable default
